--- a/_config.yml
+++ b/_config.yml
@@ -21,19 +21,21 @@ permalink: :year/:month/:day/:title:output_ext
 title: Minor E. Gordon, Ph.D.
 url: "https://minorgordon.net" # the base hostname & protocol for your site, e.g. http://example.com
 
+
 # Build settings
 include: ['_pages']
 markdown: kramdown
 theme: minima
-
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+ - Gemfile
+ - Gemfile.lock
+ - .idea/
+ - www.minorgordon.net.iml
+ - node_modules
+ - vendor/bundle/
+ - vendor/cache/
+ - vendor/gems/
+ - vendor/ruby/
