fix blog directory

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 description: >- # this means to ignore newlines until "baseurl:"
   Personal site of Minor E. Gordon, Ph.D.
 github_username:  minorg
-permalink: :year/:month/:day/:title:output_ext
+permalink: blog/:year/:month/:day/:title:output_ext
 title: Minor E. Gordon, Ph.D.
 url: "https://minorgordon.net" # the base hostname & protocol for your site, e.g. http://example.com
 
