--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@
 # in the templates via {{ site.myvariable }}.
 baseurl: "" # the subpath of your site, e.g. /blog
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal site of Minor E. Gordon
+  Personal site of Minor Gordon
 github_username:  minorg
 permalink: blog/:year/:month/:day/:title:output_ext
-title: Minor E. Gordon
+title: Minor Gordon
 url: "https://minorgordon.net" # the base hostname & protocol for your site, e.g. http://example.com
 
 
