--- a/_config.yml
+++ b/_config.yml
@@ -17,28 +17,28 @@ baseurl: "" # the subpath of your site, e.g. /blog
 description: >- # this means to ignore newlines until "baseurl:"
   Personal site of Minor Gordon
 domain: minorgordon.net
-github_username:  minorg
+github_username: minorg
 permalink: blog/:year/:month/:day/:title:output_ext
 title: Minor Gordon
 url: "https://minorgordon.net" # the base hostname & protocol for your site, e.g. http://example.com
 
-
 # Build settings
-include: ['_pages']
+include: ["_pages"]
+highlighter: rouge
 markdown: kramdown
 theme: minima
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
 exclude:
- - Gemfile
- - Gemfile.lock
- - deploy.sh
- - .idea/
- - node_modules
- - vendor/bundle/
- - vendor/cache/
- - vendor/gems/
- - vendor/ruby/
+  - Gemfile
+  - Gemfile.lock
+  - deploy.sh
+  - .idea/
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
 sass:
- sass_dir: _sass
+  sass_dir: _sass
